--- a/apps/pravya/src/app/globals.css
+++ b/apps/pravya/src/app/globals.css
@@ -29,6 +29,12 @@
     border-color: rgb(229 231 235 / 0.2);
   }
 
+  [data-state="checked"] > svg {
+    top: 10%;
+    left: 70%;
+    transform: translate(0%, 0%);
+  }
+
   body {
     background: linear-gradient(to bottom, #1a1c20, #08090d);
     color: var(--color-light);
